[package]
authors = ["Moody Liu <mooodyhunter@outlook.com>"]
description = "A simple RPC library for Rust on MOS"
edition = "2021"
homepage = "https://mos.mooody.me"
license = "GPL-3.0-or-later"
name = "librpc-rs"
repository = "https://github.com/moodyhunter/MOS"
version = "0.1.0"

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
protobuf = {version = "3.4.0", optional = true}

[features]
debug = []
default = []
